infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketio.local
      http:
        paths:
          - pathType: Prefix
            path: /api/users(/|$)(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
